Gemini multi API Key setup | GENAI=NO

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-# Google Gemini API Key
-# Get your free API key from: https://makersuite.google.com/app/apikey
-VITE_GEMINI_API_KEY=
+# Comma-separated list of Gemini API keys
+VITE_GEMINI_API_KEYS="YOUR_API_KEY_1,YOUR_API_KEY_2,YOUR_API_KEY_3"
