Add multi-AI provider support with Groq, Gemini, and OpenAI
- Add Groq as default provider (Llama 3.3 70B - fastest & free)
- Add OpenAI support (GPT-4o Mini - optional paid)
- Fix Gemini to use free tier model (1.5-flash instead of 2.5-pro)
- Create new aiService.ts with unified provider interface
- Add provider selection dropdown in ChatBot component
- Update ChatBot CSS with provider selector styling
- Shorten initial greeting message for better UX
- Update .env.example with all three provider API keys
- Remove exposed API key from Quiz.tsx
- Set Groq → Gemini → OpenAI as default priority order

All three providers work with proper error handling and fallbacks.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 # Comma-separated list of Gemini API keys
 VITE_GEMINI_API_KEYS="YOUR_API_KEY_1,YOUR_API_KEY_2,YOUR_API_KEY_3"
+
+# OpenAI API key
+VITE_OPENAI_API_KEY="YOUR_OPENAI_API_KEY"
+
+# Groq API key (Free tier - fast and generous limits)
+VITE_GROQ_API_KEY="YOUR_GROQ_API_KEY"
